<resources>
    <string name="app_name">Aispresso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="onboarding_slide1_title">Konsultasi </string>
    <string name="onboarding_slide1_subtitle">Perkebunan kopi </string>
    <string name="onboarding_slide1_desc">Rasakan pengalaman yang berbeda mengenai konsultasi online perkebunan kopi.</string>

    <string name="onboarding_slide2_title">Cek kualitas kopi</string>
    <string name="onboarding_slide2_subtitle">Kamu di aispresso</string>
    <string name="onboarding_slide2_desc">Keajaiban kopi dalam setiap biji yang tumbuh.</string>
    <string name="UI_info_camera">
        Here is an explanation of some of the buttons : \n
        👉🏻 back button to return to previous page \n
        👉🏻 information button to display additional information \n
        👉🏻 gallery button to upload image from gallery \n
        👉🏻 shutter button to take a picture using the camera \n
        👉🏻 switch button to rotate camera lens
    </string>
    <string name="UI_info_options_camera">
        Please select the processing option
    </string>

    <string name="onboarding_slide3_title">Cari investor kamu </string>
    <string name="onboarding_slide3_subtitle">Di aispresso</string>
    <string name="onboarding_slide3_desc">Berpartisipasi dalam perekonomian lokal.</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>

    <string name="UI_validation_password_rules">Password must contain at least 8 characters</string>
    <string name="UI_validation_invalid_email">Email format is invalid</string>
    <string name="UI_validation_empty_email_password">Field Email and Password must be filled</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="notification">Notification</string>
    <string name="wheater">wheater</string>
    <string name="profile_user">Profile</string>
    <string name="refresh">refresh</string>
    <string name="loading">Loading</string>
    <string name="menu_title_blank" translatable="false">" "</string>
    <string name="const_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <string name="UI_error_camera_take_photo">Failed take a picture</string>
    <string name="image_contentDescription">image</string>
    <string name="miles_per_hour">miles/hour</string>


    <string name="load_image">Load Image</string>
    <string name="take_image">Take Image</string>
    <string name="output">Output:</string>
    <string name="result">Result</string>
    <string name="click_on_the_result_text_to_search_on_google">Click on the result text to search on Google</string>
    <string name="place_holder">Place Holder</string>
    <string name="delete">delete</string>


    <string name="error_no_hardware">Aplikasi Membutuhkan FingerPrint</string>
    <string name="error_hw_unavailable">Finger Print Tidak Bekerja</string>
    <string name="error_none_enrolled">Tidak Ada Sidik Jari yang Terdaftar</string>
    <string name="success">Otentikasi Berhasil</string>
    <string name="title_biometric_prompt">Aispresso</string>
    <string name="description_biometric_prompt">Gunakan Sidik Jari Untuk Masuk</string>
    <string name="classified_as">Classified as:</string>
    <string name="confidences">Confidences:</string>
    <string name="take_photo">Take Photo</string>
    <string name="coffee_classify">Coffee Classify</string>


</resources>