<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:orientation="vertical"
    tools:context=".view.camera.coffeprocessing.CoffeClasifyActivity">

    <TextView
        android:id="@+id/tvCoffeClasify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coffee_classify"
        android:textAlignment="center"
        android:layout_marginVertical="18dp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/secondary_color"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="370sp"
        android:layout_height="370sp"
        android:layout_marginVertical="10dp"
        android:layout_below="@+id/tvCoffeClasify"
        android:layout_centerHorizontal="true"
        android:src="@drawable/no_photo"
        app:layout_constraintTop_toBottomOf="@+id/tvCoffeClasify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-34dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/classified_as"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/label_classified"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="10sp"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="@color/alert_text"
        android:textStyle="bold"
        android:textSize="27sp"
        android:id="@+id/result"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/label_classified"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confidencesText"
        android:text="@string/confidences"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/guideline1"
        android:layout_below="@+id/result"
        android:layout_marginTop="10sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="@color/secondary_color"
        android:textSize="20sp"
        android:id="@+id/confidence"
        app:layout_constraintTop_toBottomOf="@+id/confidencesText"
        app:layout_constraintStart_toEndOf="@+id/guideline1"/>


    <Button
        android:id="@+id/button"
        style="@style/firstbutton"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/secondary_color"
        android:text="@string/take_photo"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:transitionName="action"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="180dp" />


</androidx.constraintlayout.widget.ConstraintLayout>